@@ -1,7 +1,7 @@
 /*
 This file is part of canfigger<https://github.com/andy5995/canfigger>
 
-Copyright (C) 2021  Andy Alt (andy400-dev@yahoo.com)
+Copyright (C) 2021-2022 Andy Alt (andy400-dev@yahoo.com)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -20,13 +20,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #pragma once
 
 #ifndef CANFIGGER_VERSION
-#define CANFIGGER_VERSION "0.2.0999"
+#define CANFIGGER_VERSION "0.1.999"
 #endif
 
 // The max length of a line in a configuration file; a longer line will
 // get truncated when fgets() is called to read the file.
 #define __CFG_LEN_MAX_LINE (512 + 1)
 
+// Member of st_canfigger_node
+// @see canfigger_free_attr()
 typedef struct st_canfigger_attr_node st_canfigger_attr_node;
 struct st_canfigger_attr_node
 {
@@ -34,6 +36,7 @@ struct st_canfigger_attr_node
   st_canfigger_attr_node* next;
 };
 
+// Node in the linked list returned by canfigger_parse_file()
 typedef struct st_canfigger_node st_canfigger_node;
 struct st_canfigger_node
 {
@@ -56,17 +59,20 @@ typedef st_canfigger_node st_canfigger_list;
 
 //
 // Opens a config file and returns a memory-allocated linked list
-// that must be freed later (see canfiggerfree())
+// that must be freed later
+// @see canfigger_free()
 //
 // Each node is of type st_canfigger_node.
 st_canfigger_list *canfigger_parse_file (const char *file,
                                          const char delimiter);
 
 //
-// Frees the list returned by canfigger_parse_file()
+// Frees the list returned by canfigger_parse_file();
+// The root node must be used when this is called
 void canfigger_free (st_canfigger_node * node);
 
 
-// Frees the attribute node (which may be a linked list of attributes)
+// Frees the attribute node (which may be a linked list of attributes);
+// The root node must be used when this is called.
 void
 canfigger_free_attr (st_canfigger_attr_node * node);
